<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:layout_marginTop="120dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
    <EditText
        android:inputType="none"
        android:id="@+id/zhanghao"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:text="@string/liu"
        />
    <TextView
        android:layout_marginTop="20dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mima" />
    <EditText
        android:inputType="none"
        android:id="@+id/mima"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:text="@string/mi"
        />

    <!-- 记住密码 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/rememberpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rememberpassword" />
    </LinearLayout>

    <!-- 自动登录 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/autologon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autologon" />
    </LinearLayout>
    <Button
        android:id="@+id/logon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logon"/>
    <Button
        android:id="@+id/test"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
