<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="20dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_marginLeft="10dip"
            android:text="@string/chengxu"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/helplogin"
            android:layout_marginLeft="180dip"
            android:textColor="@color/white"
            android:background="#00000000"
            android:text="@string/helplogin"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:layout_marginTop="50dip"
            android:layout_marginLeft="35dip"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:orientation="horizontal">

        <EditText

            android:background="@color/white"
            android:padding="10sp"
            android:inputType="textPassword"
            android:id="@+id/editone"
            android:maxLength="1"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_marginLeft="5dip"
            />
        <EditText
            android:background="@color/white"
            android:inputType="textPassword"
            android:id="@+id/edittwo"
            android:maxLength="1"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_marginLeft="5dip"
            />
        <EditText
            android:background="@color/white"
            android:inputType="textPassword"
            android:id="@+id/editthree"
            android:maxLength="1"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_marginLeft="5dip"
            />
        <EditText
            android:background="@color/white"
            android:inputType="textPassword"
            android:id="@+id/editfour"
            android:maxLength="1"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_marginLeft="5dip"
            />
        <EditText
            android:background="@color/white"
            android:inputType="textPassword"
            android:id="@+id/editfive"
            android:maxLength="1"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_marginLeft="5dip"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="100dip"
        android:layout_marginLeft="20dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/one"
            android:text="@string/one"
            android:layout_width="105dip"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/two"
            android:text="@string/two"
            android:layout_width="105dip"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/three"
            android:text="@string/three"
            android:layout_width="105dip"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:layout_marginLeft="20dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
            android:id="@+id/four"
            android:text="@string/four"
            android:layout_width="105dip"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/five"
            android:text="@string/five"
            android:layout_width="105dip"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/six"
            android:text="@string/six"
            android:layout_width="105dip"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
           android:layout_marginLeft="20dip"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
        <Button
            android:id="@+id/seven"
            android:text="@string/seven"
            android:layout_width="105dip"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/eight"
            android:text="@string/eight"
            android:layout_width="105dip"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/nine"
            android:text="@string/nine"
            android:layout_width="105dip"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:layout_marginLeft="20dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
            android:id="@+id/c"
            android:text="@string/c"
            android:layout_width="105dip"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/zero"
            android:text="@string/zero"
            android:layout_width="105dip"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/clear"
            android:text="@string/clear"
            android:layout_width="105dip"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
            android:layout_marginLeft="20dip"
            android:layout_marginRight="10dip"
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:layout_width="315dip"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/display"
            android:layout_marginTop="20dip"
            android:layout_width="fill_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content"/>
</LinearLayout>