<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:background="@drawable/white"
        android:layout_width="fill_parent"
        android:layout_height="80dip"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="7dip"
            android:id="@+id/spaceusei"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/spaceusee"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dip"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="80dip">
        <TextView
            android:textSize="18sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/setpassword"/>
        <EditText
            android:layout_marginTop="10dip"
            android:inputType="number"
            android:id="@+id/setpass"
            android:contentDescription="@string/desc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
        android:textSize="18sp"
        android:layout_marginTop="20dip"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:text="@string/setsort"/>
    <TextView
        android:background="@drawable/while3"
        android:textSize="18sp"
        android:layout_marginTop="20dip"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:text="@string/version"/>
    <TextView
        android:background="@drawable/while3"
        android:textSize="18sp"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:text="@string/setupdata"/>
    <TextView
        android:textSize="18sp"
        android:background="@drawable/while3"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:text="@string/help"/>
</LinearLayout>
