<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:contentDescription="@string/desc"
        android:layout_gravity="center_horizontal"
        android:id="@+id/imageview"
        android:layout_width="200dip"
        android:layout_height="200dip"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/next"
            android:layout_marginLeft="20dip"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:text="@string/xia"/>
        <Button
            android:id="@+id/last"
            android:layout_marginLeft="30dip"
            android:gravity="center"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:text="@string/shang"/>
        <Button
            android:id="@+id/exit"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:text="@string/exit"/>
    </LinearLayout>
</LinearLayout>