<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:textColor="@color/white"
            android:background="#00000000"
            android:layout_marginLeft="20dip"
            android:id="@+id/set"
            android:text="@string/set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginLeft="65dip"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            android:textColor="@color/pink"
            android:text="@string/diary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:textColor="@color/white"
            android:background="#00000000"
            android:text="@string/writedrary"
            android:layout_marginLeft="65dip"
            android:id="@+id/writediary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <ListView

        android:id="@+id/diaryshow"
        android:scrollbars="vertical"
        android:background="@drawable/writediary1"
        android:layout_width="fill_parent"
        android:divider="#FFF"
        android:dividerHeight="2dip"
        android:listSelector="@color/lightpink"
        android:cacheColorHint="@android:color/transparent"
        android:layout_height="520dip"/>


    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:textColor="@color/white"
            android:background="#00000000"
            android:layout_marginLeft="25dip"
            android:text="@string/deletediary"
            android:id="@+id/deletediary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:textColor="@color/white"
            android:background="#00000000"
            android:layout_marginLeft="60dip"
            android:text="@string/scandiary"
            android:id="@+id/scandiary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:textColor="@color/white"
            android:background="#00000000"
            android:layout_marginLeft="60dip"
            android:text="@string/firstfinish"
            android:id="@+id/firstfinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

</LinearLayout>
