<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:background="#FFCCFF"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:layout_marginLeft="15dip"
            android:background="#000000"
            android:id="@+id/change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change"/>
        <Button
            android:layout_marginLeft="15dip"
            android:background="#000000"
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"/>
        <Button
            android:layout_marginLeft="15dip"
            android:background="#000000"
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"/>
    </LinearLayout>
    <EditText
        android:gravity="top"
        android:inputType="none"
        android:id="@+id/diarycontent"
        android:layout_width="fill_parent"
        android:background="@drawable/writediary1"
        android:layout_height="450dip"/>

    <LinearLayout
        android:background="#FFCCFF"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageview1"
                android:layout_marginTop="5dip"
                android:layout_marginLeft="15dip"
                android:contentDescription="@string/desc"
                android:layout_width="40dip"
                android:layout_height="30dip"
                android:background="@drawable/takephoto"/>
            <Button
                android:layout_marginLeft="5dip"
                android:background="#000000"
                android:id="@+id/takephoto"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/takephoto"
                />
        </LinearLayout>
        <!--  -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageview2"
                android:layout_marginTop="5dip"
                android:layout_marginLeft="30dip"
                android:contentDescription="@string/desc"
                android:layout_width="40dip"
                android:layout_height="30dip"
                android:background="@drawable/picture"/>
            <Button
                android:layout_marginLeft="20dip"
                android:background="#000000"
                android:id="@+id/sanphoto"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scanphoto"
                />
        </LinearLayout>
        <!--  -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView

                android:id="@+id/imageview3"
                android:layout_marginTop="5dip"
                android:layout_marginLeft="30dip"
                android:contentDescription="@string/desc"
                android:layout_width="40dip"
                android:layout_height="30dip"
                android:background="@drawable/jieping"/>
            <Button
                android:layout_marginLeft="20dip"
                android:background="#000000"
                android:id="@+id/autocam"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/autocam"/>
        </LinearLayout>
        <!--  -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageview4"
                android:layout_marginTop="5dip"
                android:layout_marginLeft="30dip"
                android:contentDescription="@string/desc"
                android:layout_width="40dip"
                android:layout_height="30dip"
                android:background="@drawable/finish"/>
            <Button
                android:layout_marginLeft="20dip"
                android:background="#000000"
                android:id="@+id/finish"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finish"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
